--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <title>Angular2TourOfHeroes</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
 </head>
 <body>
   <app-root>Loading...</app-root>
